--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,11 @@ on:
   push:
     branches: [ "main" ]
 
+# permission can be added at job level or workflow level    
+permissions:
+      id-token: write   # This is required for requesting the JWT
+      contents: read    # This is required for actions/checkout
+
 jobs:
 
   build:
@@ -20,14 +25,8 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1 # More information on this action can be found below in the 'AWS Credentials' section
       with:
-        role-to-assume: arn:aws:iam::611106530103:user/github-ci
+        role-to-assume: arn:aws:iam::611106530103:role/gh-build-role
         aws-region: ca-central-1
-
-    # - name: Install kubectl
-    #   uses: azure/setup-kubectl@v1
-    #   with:
-    #     version: 'v1.21.3'
-    #   id: install
 
     - name: Login to Amazon ECR
       id: login-ecr
