--- a/app.env
+++ b/app.env
@@ -1,5 +1,5 @@
-DB_DRIVER="postgres"
-DB_SOURCE="postgresql://root:password@localhost:5432/simple_bank?sslmode=disable"
-SERVER_ADDRESS="0.0.0.0:8080"
-TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
+DB_SOURCE=postgresql://root:20020419&gaL@simplebank-db.cixu4qvdphcz.ca-central-1.rds.amazonaws.com:5432/postgres
+DB_DRIVER=postgres
+SERVER_ADDRESS=0.0.0.0:8000
+TOKEN_SYMMETRIC_KEY=2c3c86b64f60ce96bb8f5512696cfdff
 ACCESS_TOKEN_DURATION=15m
