--- a/app.env
+++ b/app.env
@@ -1,4 +1,4 @@
-DB_SOURCE=postgresql://root:20020419&gaL@simplebank-db.cixu4qvdphcz.ca-central-1.rds.amazonaws.com:5432/postgres
+DB_SOURCE=postgresql://root:20020419!yyF@simplebank-db.cixu4qvdphcz.ca-central-1.rds.amazonaws.com:5432/postgres
 DB_DRIVER=postgres
 SERVER_ADDRESS=0.0.0.0:8000
 TOKEN_SYMMETRIC_KEY=2c3c86b64f60ce96bb8f5512696cfdff
