--- a/app.env
+++ b/app.env
@@ -3,3 +3,4 @@ DB_DRIVER=postgres
 SERVER_ADDRESS=0.0.0.0:8000
 TOKEN_SYMMETRIC_KEY=2c3c86b64f60ce96bb8f5512696cfdff
 ACCESS_TOKEN_DURATION=15m
+# DB_SOURCE!!!!！
