--- a/app.env
+++ b/app.env
@@ -1,6 +1,7 @@
-DB_SOURCE=postgresql://root:20020419!yyF@simplebank-db.cixu4qvdphcz.ca-central-1.rds.amazonaws.com:5432/postgres
-DB_DRIVER=postgres
-SERVER_ADDRESS=0.0.0.0:8080
-TOKEN_SYMMETRIC_KEY=2c3c86b64f60ce96bb8f5512696cfdff
+DB_DRIVER="postgres"
+DB_SOURCE="postgresql://root:password@localhost:5432/simple_bank?sslmode=disable"
+SERVER_ADDRESS="0.0.0.0:8080"
+GRPC_SERVER_ADDRESS=0.0.0.0:9090
+TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
 ACCESS_TOKEN_DURATION=15m
-# DB_SOURCE!!!!！
+REFRESH_TOKEN_DURATION=24h
